--- a/trunk/src/Catnap.UnitTests/Catnap.UnitTests.csproj
+++ b/trunk/src/Catnap.UnitTests/Catnap.UnitTests.csproj
@@ -84,7 +84,7 @@
     <Compile Include="BasicTests.cs" />
     <Compile Include="Models\Forum.cs" />
     <Compile Include="Models\Person.cs" />
-    <Compile Include="Models\PersonQuerySpec.cs" />
+    <Compile Include="Models\PersonFindSpec.cs" />
     <Compile Include="Models\Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
