--- a/trunk/src/Catnap.IntegrationTests/Catnap.IntegrationTests.csproj
+++ b/trunk/src/Catnap.IntegrationTests/Catnap.IntegrationTests.csproj
@@ -83,7 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="sqlite3.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
