--- a/trunk/src/Catnap.UnitTests/Catnap.UnitTests.csproj
+++ b/trunk/src/Catnap.UnitTests/Catnap.UnitTests.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="LogTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Catnap.Common\Catnap.Common.csproj">
