--- a/trunk/src/Catnap.Common/Catnap.Common.csproj
+++ b/trunk/src/Catnap.Common/Catnap.Common.csproj
@@ -37,6 +37,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database\IDbTypeConverter.cs" />
     <Compile Include="Logging\ConsoleLogger.cs" />
     <Compile Include="Database\DbCommandSpec.cs" />
     <Compile Include="Database\IDbCommand.cs" />
