--- a/src/Catnap.Common/Catnap.Common.csproj
+++ b/src/Catnap.Common/Catnap.Common.csproj
@@ -38,10 +38,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Database\IDbTypeConverter.cs" />
+    <Compile Include="Database\IMetadataCommandFactory.cs" />
     <Compile Include="Logging\ConsoleLogger.cs" />
     <Compile Include="Database\DbCommandSpec.cs" />
     <Compile Include="Database\IDbCommand.cs" />
     <Compile Include="Database\IDbConnection.cs" />
+    <Compile Include="Logging\FileLogger.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\Log.cs" />
     <Compile Include="Logging\LogLevel.cs" />
