--- a/trunk/src/Catnap.UnitTests/Catnap.UnitTests.csproj
+++ b/trunk/src/Catnap.UnitTests/Catnap.UnitTests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{FCF48990-7CA3-41FB-B016-62931FEECFAF}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -83,6 +83,7 @@
   <ItemGroup>
     <Compile Include="BasicTests.cs" />
     <Compile Include="ConditionTests.cs" />
+    <Compile Include="SqliteTypeConverterTests.cs" />
     <Compile Include="Models\Forum.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\Post.cs" />
