--- a/trunk/src/Catnap.IntegrationTests/packages.config
+++ b/trunk/src/Catnap.IntegrationTests/packages.config
@@ -3,4 +3,5 @@
   <package id="Machine.Specifications" version="0.4.13.0" />
   <package id="ShouldFluent" version="1.1.12.0" />
   <package id="Moq" version="4.0.10827" />
+  <package id="System.Data.SQLite" version="1.0.66.1" />
 </packages>
